# irrlicht

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  changes.txt  portfile.cmake  vcpkg.json
cmake/: OpenCVCompilerOptimizations.cmake  OpenCVDetectCXXCompiler.cmake  OpenCVFindAes.cmake  OpenCVFindLibsGUI.cmake  OpenCVFindLibsGrfmt.cmake  OpenCVGenConfig.cmake  OpenCVGenHeaders.cmake  OpenCVGenInfoPlist.cmake  OpenCVInstallLayout.cmake  OpenCVMinDepVersions.cmake  OpenCVModule.cmake  OpenCVPackaging.cmake  OpenCVUtils.cmake  OpenCVVersion.cmake  dashboard.cmake  find_lib_graphics.cmake  find_lib_thirdy.cmake  targets.cmake
cmake/summary/: dashboard.cmake  detect_compiler.cmake  utils.cmake  version.cmake
cmake/templates/: IrrlichtConfig.cmake.in  OpenCVConfig-version.cmake.in  OpenCVConfig.cmake.in  OpenCVConfig.root-ANDROID.cmake.in  OpenCVConfig.root-WIN32.cmake.in  TargetConfig.cmake.in  cv_cpu_config.h.in  cvconfig.h.in  dllmain.cpp.in
examples/01.HelloWorld_Android/: AndroidManifest.xml  build.xml
examples/10.Shaders/: main.cpp
examples/Demo/: CMainMenu.cpp
include/: IEventReceiver.h  IrrCompileConfig.h  Keycodes.h  irrTypes.h  irrpack.h  irrunpack.h  quaternion.h
source/: CMakeLists.txt  irr_config.h.in
source/Irrlicht/: CEGLManager.h  CFileSystem.cpp  CGLXManager.cpp  CIrrDeviceSDL.cpp  CIrrDeviceWin32.cpp  CMakeLists.txt  COGLES2Common.h  COGLES2Driver.h  COGLESCommon.h  COGLESDriver.h  COGLESExtensionHandler.cpp  COpenGLCommon.h  CWGLManager.cpp  CZipReader.cpp  Irrlicht.cpp  SoftwareDriver2_compile_config.h  os.cpp  version.hpp
source/Irrlicht/Android/: CAndroidAssetFileArchive.cpp  CAndroidAssetReader.cpp  CIrrDeviceAndroid_mainstub.cpp  CIrrDeviceAndroid_mainstub.h  android_native_app_glue.h
source/Irrlicht/aesGladman/: CMakeLists.txt  aes_ni.h  aesopt.h  aestab.cpp  fileenc.cpp  hmac.cpp  pwd2key.cpp  version.h
source/Irrlicht/bzip2/: CMakeLists.txt  bzlib.h  dlltest.c
source/Irrlicht/jpeglib/: CMakeLists.txt
source/Irrlicht/lzma/: CMakeLists.txt  Types.h  version.h
source/Irrlicht/zlib/: zconf.h
tests/: tests-last-passed-at.txt
tools/: CMakeLists.txt
